kubernetes-dashboard/kubernetes-dashboard-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  tls:
  - hosts:
    - k8s.ax.com
    secretName: loadblance
  rules:
  - host: k8s.ax.com
    http:
      paths:
      - path: /dashboard/
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
